--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,6 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
+
 
 {% block page_title %}
 sign up
@@ -8,5 +10,6 @@ sign up
     <form action="" method="POST">
         {% csrf_token %}
         {{ form|crispy }}
+        <button type="submit">submit</button>
     </form>
 {% endblock content %}
