add url product detail in product.urls.py

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,7 +5,7 @@ product detail
 {% endblock page_title %}
 
 {% block content %}
-    {{ product.tite }}
+    {{ product.title }}
     <br>
     {{ product.description }}
     <br>
