--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -6,7 +6,7 @@ product list
 
 {% block content %}
     {% for product in products %}
-        <a href="{% url 'product_detail' product.id %}">{{ product.title }}</a>
+        <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
         <br>
         {{ product.description }}
         <br>
