--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% load comments_tags %}
 
 {% block page_title %}
     product detail
@@ -80,7 +81,7 @@
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab"
                                        data-toggle="tab" href="#nav-reviews" role="tab" aria-selected="true">
-                                        <span>نظرات ({{ product.comments.count }})</span>
+                                        <span>نظرات ({{ product.comments.count|only_active_comment }})</span>
                                     </a>
                                 </div>
                                 <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -122,7 +123,7 @@
                                             <h3 class="review__title">{{ product.comments.count }} نظر
                                                 برای {{ product.title }}</h3>
                                             <ul class="review__list">
-                                                {% for comment in product.comments.all %}
+                                                {% for comment in product.comments.all|only_active_comment %}
                                                     <li class="review__item">
                                                         <div class="review__container">
                                                             <div class="review__text">
