--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-
+{% load i18n %}
 
 {% block page_title %}
     product detail
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                            <h1 class="page-title">جزئیات محصول «{{ product.title }}»</h1>
+                            <h1 class="page-title">{% trans 'product detail' %} «{{ product.title }}»</h1>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                                     {{ product.description|truncatewords:30 }}
                                 </p>
                                 <div class="my-5 py-5 product-price-wrapper mb--25">
-                                    <span class="money text-success">{{ product.price }} تومان</span>
+                                    <span class="money text-success">{{ product.price }} {% trans '$' %}</span>
                                 </div>
                                 <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                     <div class="quantity-wrapper d-flex justify-content-start">
@@ -52,11 +52,11 @@
                                     </div>
                                     <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
                                             onclick="window.location.href='cart.html'">
-                                        اضافه به سبد خرید
+                                        {% trans 'add to cart' %}
                                     </button>
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
-                                    <p><span class="m-0">دسته بندی ها:</span>
+                                    <p><span class="m-0">{% trans 'catrgories' %}:</span>
                                         <a href="shop.html">لباس</a>,
                                         <a href="shop.html">تابستانی</a>,
                                         <a href="shop.html">گرم</a>,
@@ -72,15 +72,15 @@
                                 <div class="nav nav-tabs product-data-tab__head" id="product-tab" role="tablist">
                                     <a class="m-0 product-data-tab__link nav-link active" id="nav-description-tab"
                                        data-toggle="tab" href="#nav-description" role="tab" aria-selected="true">
-                                        <span>توضیحات محصول</span>
+                                        <span>{% trans 'product description' %}</span>
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
                                        href="#nav-info" role="tab" aria-selected="true">
-                                        <span>ویژگی ها</span>
+                                        <span>{% trans 'atrebiuts' %}</span>
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab"
                                        data-toggle="tab" href="#nav-reviews" role="tab" aria-selected="true">
-                                        <span>نظرات ({{ product.comments.count }})</span>
+                                        <span>{% trans 'comments' %} ({{ product.comments.count }})</span>
                                     </a>
                                 </div>
                                 <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -119,8 +119,8 @@
                                     <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
-                                            <h3 class="review__title">{{ product.comments.count }} نظر
-                                                برای {{ product.title }}</h3>
+                                            <h3 class="review__title">{{ product.comments.count }} {% trans 'comment for' %}
+                                                 {{ product.title }}</h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all %}
                                                     <li class="review__item">
@@ -137,7 +137,7 @@
                                                                         </div>
                                                                         <div class="product-rating">
                                                                             <div class="m-0 star-rating star-five">
-                                                                                <span>Rated <strong
+                                                                                <span>{% trans 'rated' %} <strong
                                                                                         class="rating">{{ comment.stars }}</strong> out of 5</span>
                                                                             </div>
                                                                         </div>
@@ -155,12 +155,12 @@
                                                 <div class="row">
                                                     <div class="border-top py-5 w-100"></div>
                                                     <div class="col-lg-8 m-auto">
-                                                        <span class="reply-title pull-right">نظر خود را بنویسید</span>
+                                                        <span class="reply-title pull-right">{% trans 'write your comment' %}</span>
                                                         <br>
                                                         <form action="{% url 'comment_create' product.id %}" method="POST">
                                                             {% csrf_token %}
                                                             {{ comment_form|crispy }}
-                                                            <button type="submit">send</button>
+                                                            <button type="submit">{% trans 'send' %}</button>
                                                         </form>
 {#                                                        <form action="#" class="form text-right">#}
 {#                                                            <div class="form-notes mb--20">#}
