--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load i18n %}
 
 {% block page_title %}
     product list
@@ -55,8 +56,7 @@
                                                         <span class="money text-success"> {{ product.price }} تومان</span>
                                                     </div>
                                                     <a href="cart.html"
-                                                       class="btn btn-small btn-bg-sand btn-color-dark px-3">اضافه کردن
-                                                        به سبد خرید</a>
+                                                       class="btn btn-small btn-bg-sand btn-color-dark px-3">{% trans 'add to cart' %}</a>
                                                 </div>
                                             </div>
                                         </div>
