--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -155,8 +155,8 @@
                                                 <div class="row">
                                                     <div class="border-top py-5 w-100"></div>
                                                     <div class="col-lg-8 m-auto">
-                                                        <span class="reply-title pull-right">{% trans 'write your comment' %}</span>
-                                                        <br>
+{#                                                        <span class="reply-title pull-right">{% trans 'write your comment' %}</span>#}
+{#                                                        <br>#}
                                                         <form action="{% url 'comment_create' product.id %}" method="POST">
                                                             {% csrf_token %}
                                                             {{ comment_form|crispy }}
