--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,6 +8,13 @@
 {% endblock page_title %}
 
 {% block content %}
+    {% if messages %}
+        {% for message in messages %}
+           <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+           </div>
+        {% endfor %}
+    {% endif %}
     <!-- Main Wrapper Start -->
     <div class="wrapper">
         <!-- Breadcrumb area Start -->
@@ -120,7 +127,7 @@
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
                                             <h3 class="review__title">{{ product.comments.count }} {% trans 'comment for' %}
-                                                 {{ product.title }}</h3>
+                                                {{ product.title }}</h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all %}
                                                     <li class="review__item">
@@ -130,7 +137,7 @@
                                                                     <img src="{% static 'img/others/comment-1.jpg' %}"
                                                                          alt="Review Avatar" class="review__avatar">
                                                                     <div>
-                                                                            <strong class="review__author px-4">{{ comment.author.username }}</strong>
+                                                                        <strong class="review__author px-4">{{ comment.author.username }}</strong>
                                                                         <div class="review__meta">
                                                                             <span class="review__dash">-</span>
                                                                             <span class="review__published-date">{{ comment.datetime_created }}</span>
@@ -155,45 +162,46 @@
                                                 <div class="row">
                                                     <div class="border-top py-5 w-100"></div>
                                                     <div class="col-lg-8 m-auto">
-{#                                                        <span class="reply-title pull-right">{% trans 'write your comment' %}</span>#}
-{#                                                        <br>#}
-                                                        <form action="{% url 'comment_create' product.id %}" method="POST">
+                                                        {#                                                        <span class="reply-title pull-right">{% trans 'write your comment' %}</span>#}
+                                                        {#                                                        <br>#}
+                                                        <form action="{% url 'comment_create' product.id %}"
+                                                              method="POST">
                                                             {% csrf_token %}
                                                             {{ comment_form|crispy }}
                                                             <button type="submit">{% trans 'send' %}</button>
                                                         </form>
-{#                                                        <form action="#" class="form text-right">#}
-{#                                                            <div class="form-notes mb--20">#}
-{#                                                                <p class="my-3"><span class="required">*</span>ایمیل شما#}
-{#                                                                    برای دیگران نشان داده نمیشود.</p>#}
-{#                                                            </div>#}
-{#                                                            <div class="form__group mb--10">#}
-{#                                                                <label class="form__label d-block" for="email">متن نظر#}
-{#                                                                    شما<span class="required">*</span></label>#}
-{#                                                                <textarea name="review" id="review"#}
-{#                                                                          class="form__input form__input--textarea"></textarea>#}
-{#                                                            </div>#}
-{#                                                            <div class="form__group mb--20">#}
-{#                                                                <label class="form__label d-block" for="name">نام#}
-{#                                                                    شما<span class="required">*</span></label>#}
-{#                                                                <input type="text" name="name" id="name"#}
-{#                                                                       class="form__input">#}
-{#                                                            </div>#}
-{#                                                            <div class="form__group mb--20">#}
-{#                                                                <label class="form__label d-block" for="email">ایمیل شما<span#}
-{#                                                                        class="required">*</span></label>#}
-{#                                                                <input type="email" name="email" id="email"#}
-{#                                                                       class="form__input">#}
-{#                                                            </div>#}
-{#                                                            <div class="form__group">#}
-{#                                                                <div class="form-row">#}
-{#                                                                    <div class="col-12">#}
-{#                                                                        <input type="submit" value="ارسال"#}
-{#                                                                               class="btn-submit">#}
-{#                                                                    </div>#}
-{#                                                                </div>#}
-{#                                                            </div>#}
-{#                                                        </form>#}
+                                                        {#                                                        <form action="#" class="form text-right">#}
+                                                        {#                                                            <div class="form-notes mb--20">#}
+                                                        {#                                                                <p class="my-3"><span class="required">*</span>ایمیل شما#}
+                                                        {#                                                                    برای دیگران نشان داده نمیشود.</p>#}
+                                                        {#                                                            </div>#}
+                                                        {#                                                            <div class="form__group mb--10">#}
+                                                        {#                                                                <label class="form__label d-block" for="email">متن نظر#}
+                                                        {#                                                                    شما<span class="required">*</span></label>#}
+                                                        {#                                                                <textarea name="review" id="review"#}
+                                                        {#                                                                          class="form__input form__input--textarea"></textarea>#}
+                                                        {#                                                            </div>#}
+                                                        {#                                                            <div class="form__group mb--20">#}
+                                                        {#                                                                <label class="form__label d-block" for="name">نام#}
+                                                        {#                                                                    شما<span class="required">*</span></label>#}
+                                                        {#                                                                <input type="text" name="name" id="name"#}
+                                                        {#                                                                       class="form__input">#}
+                                                        {#                                                            </div>#}
+                                                        {#                                                            <div class="form__group mb--20">#}
+                                                        {#                                                                <label class="form__label d-block" for="email">ایمیل شما<span#}
+                                                        {#                                                                        class="required">*</span></label>#}
+                                                        {#                                                                <input type="email" name="email" id="email"#}
+                                                        {#                                                                       class="form__input">#}
+                                                        {#                                                            </div>#}
+                                                        {#                                                            <div class="form__group">#}
+                                                        {#                                                                <div class="form-row">#}
+                                                        {#                                                                    <div class="col-12">#}
+                                                        {#                                                                        <input type="submit" value="ارسال"#}
+                                                        {#                                                                               class="btn-submit">#}
+                                                        {#                                                                    </div>#}
+                                                        {#                                                                </div>#}
+                                                        {#                                                            </div>#}
+                                                        {#                                                        </form>#}
                                                     </div>
                                                 </div>
                                             </div>
