--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,16 +51,20 @@
                                     <span class="money text-success">{{ product.price }} {% trans '$' %}</span>
                                 </div>
                                 <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
-                                    <div class="quantity-wrapper d-flex justify-content-start">
-                                        <div class="quantity">
-                                            <input type="number" class="quantity-input" name="qty" id="qty" value="1"
-                                                   min="1">
-                                        </div>
+                                        <form action="{% url 'cart:cart_add' product.id %}" method="POST">
+                                            {% csrf_token %}
+                                            {{ add_to_cart_product_form.as_p }}
+                                            <button type="submit">{% trans 'add to cart' %}</button>
+                                        </form>
+{#                                    <div class="quantity-wrapper d-flex justify-content-start">#}
+{#                                        <div class="quantity">#}
+{#                                            <input type="number" class="quantity-input" name="qty" id="qty" value="1"#}
+{#                                                   min="1">#}
+{#                                        </div>#}
                                     </div>
-                                    <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
-                                            onclick="window.location.href='cart.html'">
-                                        {% trans 'add to cart' %}
-                                    </button>
+{#                                    <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2">#}
+{#                                        {% trans 'add to cart' %}#}
+{#                                    </button>#}
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
                                     <p><span class="m-0">{% trans 'catrgories' %}:</span>
