--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,11 +12,6 @@
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{% static 'img/icon.png' %}">
 
-        <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
     <!-- ************************* CSS Files ************************* -->
 
     <link rel="stylesheet" href="{% static 'css/_base.css' %}">
@@ -26,6 +21,13 @@
 
     <!-- style css -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+
+    {#    <meta charset="utf-8">#}
+    {#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
+    {#        <title>Bootstrap demo</title>#}
+    {#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"#}
+    {#          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">#}
 
 
 </head>
@@ -43,7 +45,7 @@
 {#    <!-- Preloader End -->#}
 
     <!-- Main Wrapper Start -->
-    <div class="wrapper">
+
         <!-- Header Start -->
         <header class="header">
             <div class="header-inner fixed-header">
@@ -230,8 +232,6 @@
         <div class="ShoppingYar-global-overlay"></div>
         <!-- Global Overlay End -->
 
-    </div>
-    <!-- Main Wrapper End -->
 
 
     <!-- ************************* JS Files ************************* -->
