--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -21,9 +21,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mb-md--50">
-                        <form class="cart-form" action="#">
-                            <div class="row no-gutters">
-                                <div class="col-12">
+                        <div class="row no-gutters">
+                            <div class="col-12">
+                                {% if cart %}
                                     <div class="table-content table-responsive">
                                         <table class="table text-center">
                                             <thead>
@@ -40,7 +40,7 @@
                                             {% for item in cart %}
                                                 <tr>
                                                     <td class="product-remove text-left">
-                                                        <a href='{% url "cart:cart_remove"  item.product_obj.id  %}'>
+                                                        <a href='{% url "cart:cart_remove"  item.product_obj.id %}'>
                                                             <i class="flaticon flaticon-cross"></i>
                                                         </a>
                                                     </td>
@@ -59,14 +59,26 @@
                                                             </span>
                                                     </td>
                                                     <td class="product-quantity">
-                                                        <div class="quantity">
-                                                            <input type="number" class="quantity-input" name="qty"
-                                                                   id="qty-1" value="{{ item.quantity }}" min="1">
-                                                        </div>
+                                                        <form class="d-flex"
+                                                              action="{% url 'cart:cart_add' item.product_obj.id %}"
+                                                              method="POST">
+                                                            {% csrf_token %}
+                                                            <div class="quantity">
+                                                                <input type="number"
+                                                                       class="quantity-input"
+                                                                       name="quantity"
+                                                                       id="qty-1"
+                                                                       value="{{ item.quantity }}"
+                                                                       min="1"
+                                                                >
+                                                            </div>
+                                                            {{ item.product_update_quantity_form.inplace }}
+                                                            <button class="btn btn-small" type="submit">update</button>
+                                                        </form>
                                                     </td>
                                                     <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{{ item.product_obj.price }} {% trans '$' %}</span>
+                                                                <span class="money">{{ item.total_price }} {% trans '$' %}</span>
                                                             </span>
                                                     </td>
                                                 </tr>
@@ -75,28 +87,32 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                </div>
+                                {% else %}
+                                    <p>please select some product</p>
+                                    <a href="{% url 'product_list' %}">Go Shop</a>
+                                {% endif %}
                             </div>
-                            <div class="row no-gutters border-top pt--20 mt--20">
-                                <div class="col-sm-6 text-sm-right">
-                                    <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
-                                </div>
+
+                        </div>
+                        <div class="row no-gutters border-top pt--20 mt--20">
+                            <div class="col-sm-6 text-sm-right">
+                                <button type="submit" class="cart-form__btn">خالی کردن سبد خرید</button>
                             </div>
-                        </form>
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="cart-collaterals">
                             <div class="cart-totals">
                                 <h5 class="font-size-14 font-bold mb--15">مجموع</h5>
                                 <div class="cart-calculator">
-                                    <div class="cart-calculator__item">
-                                        <div class="cart-calculator__item--head">
-                                            <span>مجموع</span>
-                                        </div>
-                                        <div class="cart-calculator__item--value">
-                                            <span>{{ cart.get_total_price }} {% trans '$' %}</span>
-                                        </div>
-                                    </div>
+                                    {#                                    <div class="cart-calculator__item">#}
+                                    {#                                        <div class="cart-calculator__item--head">#}
+                                    {#                                            <span>مجموع</span>#}
+                                    {#                                        </div>#}
+                                    {#                                        <div class="cart-calculator__item--value">#}
+                                    {#                                            <span>{{ cart.get_total_price }} {% trans '$' %}</span>#}
+                                    {#                                        </div>#}
+                                    {#                                    </div>#}
                                     <div class="cart-calculator__item order-total">
                                         <div class="cart-calculator__item--head">
                                             <span>جمع کل</span>
