--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -17,7 +17,10 @@
     {% endif %}
     <!-- Main Content Wrapper Start -->
     <div class="main-content-wrapper">
+
         <div class="page-content-inner ptb--80">
+        {% trans 'cart' as x %}
+        {% include 'topheader.html' with header_name=x %}
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mb-md--50">
