--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load i18n %}
+{% load jalali_tags %}
+{% load persian_translation_tags %}
 
 {% block page_title %}
     product detail
@@ -37,7 +39,7 @@
                                         {{ product.description|truncatewords:30 }}
                                     </p>
                                     <div class="my-5 py-5 product-price-wrapper mb--25">
-                                        <span class="money text-success">{{ product.price }} {% trans '$' %}</span>
+                                        <span class="money text-success">{{ product.price|trans_to_persian }} {% trans '$' %}</span>
                                     </div>
                                     <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                         <form action="{% url 'cart:cart_add' product.id %}" method="POST">
@@ -130,32 +132,35 @@
                                                 {{ product.title }}</h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all %}
-                                                    <li class="review__item">
-                                                        <div class="review__container">
-                                                            <div class="review__text">
-                                                                <div class="d-flex flex-sm-row flex-row">
-                                                                    <img src="{% static 'img/others/comment-1.jpg' %}"
-                                                                         alt="Review Avatar" class="review__avatar">
-                                                                    <div>
-                                                                        <strong class="review__author px-4">{{ comment.author.username }}</strong>
-                                                                        <div class="review__meta">
-                                                                            <span class="review__dash">-</span>
-                                                                            <span class="review__published-date">{{ comment.datetime_created }}</span>
-                                                                        </div>
-                                                                        <div class="product-rating">
-                                                                            <div class="m-0 star-rating star-five">
-                                                                                    <span>{% trans 'rated' %} <strong
-                                                                                            class="rating"></strong> out of {{ comment.stars }}</span>
+                                                    {% if comment.is_active %}
+                                                        <li class="review__item">
+                                                            <div class="review__container">
+                                                                <div class="review__text">
+                                                                    <div class="d-flex flex-sm-row flex-row">
+                                                                        <img src="{% static 'img/others/comment-1.jpg' %}"
+                                                                             alt="Review Avatar" class="review__avatar">
+                                                                        <div>
+                                                                            <strong class="review__author px-4">{{ comment.author.username }}</strong>
+                                                                            <div class="review__meta">
+                                                                                <span class="review__dash">-</span>
+                                                                                <span class="review__published-date">{{ comment.datetime_created|to_jalali:'%Y/%m/%d _ %H:%M:%S'  }}</span>
+                                                                            </div>
+                                                                            <div class="product-rating">
+                                                                                <div class="m-0 star-rating star-five">
+                                                                                        <span>{% trans 'rated' %} <strong
+                                                                                                class="rating"></strong> out of {{ comment.stars }}</span>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
+                                                                    <p class="review__description text-right px-4">
+                                                                        {{ comment.body }}
+                                                                    </p>
                                                                 </div>
-                                                                <p class="review__description text-right px-4">
-                                                                    {{ comment.body }}
-                                                                </p>
                                                             </div>
-                                                        </div>
-                                                    </li>
+                                                        </li>
+
+                                                    {% endif %}
                                                 {% endfor %}
                                             </ul>
                                             <div class="review-form-wrapper">
