change some file

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -253,7 +253,7 @@
                                 </ul>
                             </div>
                             <div class="footer-widget">
-                                Codingyar.com © | all rights reserved
+                                MarketPlace © | all rights reserved
                             </div>
                         </div>
                     </div>
